force-app/main/default/objects/Filogix_MetaData__mdt/Filogix_MetaData__mdt.object-meta.xml
<CustomObject>
    <label>Filogix MetaData</label>
    <pluralLabel>Filogix MetaData</pluralLabel>
</CustomObject>