force-app/main/default/objects/Filogix_MetaData__mdt/fields/FirmCode__c.field-meta.xml
<CustomField>
    <fullName>FirmCode__c</fullName>
    <label>FirmCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>