force-app/main/default/objects/Filogix_MetaData__mdt/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <label>OrgId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>