force-app/main/default/objects/Filogix_MetaData__mdt/fields/Scheduler_Enddate__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Enddate__c</fullName>
    <label>Scheduler Enddate</label>
    <type>DateTime</type>
</CustomField>