force-app/main/default/objects/Filogix_MetaData__mdt/fields/Scheduler_Interval__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Interval__c</fullName>
    <label>Scheduler Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every 6 hours</fullName>
                <default>true</default>
                <label>Every 6 hours</label>
            </value>
            <value>
                <fullName>Every 12 hours</fullName>
            </value>
            <value>
                <fullName>Every 24 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>