force-app/main/default/objects/Filogix_MetaData__mdt/fields/Scheduler_Startdate__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Startdate__c</fullName>
    <label>Scheduler Startdate</label>
    <type>DateTime</type>
</CustomField>