force-app/main/default/objects/Filogix_MetaData__mdt/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>UserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>